# dex-java

./: .gitignore  README.md  settings.gradle
.github/workflows/: build-windows-exe.yml
EmergencyBlackBox/: build.gradle.kts  settings.gradle.kts
EmergencyBlackBox/app/: build.gradle.kts  proguard-rules.pro
ai_voc_assistant/: .gitignore  README.md  pubspec.yaml
ai_voc_assistant/.github/workflows/: build-android-apk.yml  build-windows-exe.yml
ai_voc_assistant/android/: build.gradle.kts  gradle.properties
ai_voc_assistant/android/app/: build.gradle.kts
ai_voc_assistant/docs/demo/: demo_script_3min_ko.txt
ai_voc_assistant/ios/Runner/: Info.plist
ai_voc_assistant/ios/Runner.xcodeproj/: project.pbxproj
ai_voc_assistant/lib/: main.dart
ai_voc_assistant/linux/: CMakeLists.txt
ai_voc_assistant/linux/runner/: my_application.cc
ai_voc_assistant/scripts/: build_release_artifacts.sh  faiss_bridge_server.py  requirements-faiss.txt
ai_voc_assistant/test/: widget_test.dart
ai_voc_assistant/web/: index.html  manifest.json
ai_voc_assistant/windows/: CMakeLists.txt
ai_voc_assistant/windows/runner/: Runner.rc  (+1 more)
ireumGil/: local.properties  settings.gradle
ireumGil/app/: build.gradle
lumi/: settings.gradle
lumi/app/: build.gradle
lumi/app/src/main/cpp/: CMakeLists.txt  lumi_local_image.cpp
lumi2/: settings.gradle
lumi2/app/: build.gradle
lumora/: settings.gradle
lumora/app/: build.gradle  proguard-rules.pro
signPdf/: settings.gradle
signPdf/app/: build.gradle  proguard-rules.pro
whereIsIt/: settings.gradle
whereIsIt/app/: build.gradle
(+404 files in other folders)
